--- a/compose/styles/styles.css
+++ b/compose/styles/styles.css
@@ -10,11 +10,12 @@ header {
     background-color: #333;
     color: #fff;
     text-align: right;
-    padding: 20px 20px 20px 20px;
+    padding: 6px 0px 6px 30px;
     display: flex;
     justify-content: space-between; 
     align-items: center;
-
+    border-radius: 12px 12px 12px 12px;
+    margin: 8px;
 
 }
 
